# chatty

./: .gitignore  Dockerfile  PLAN.md  README.md  chatty.py  pyproject.toml
agentlib/: agent.py  manager.py  tools.py  tracing.py
demo-mcp-server/: server.py
docs/external-deps/litellm/: litellm.txt
docs/external-deps/mcp/: specification-2025-03-26.llm.detailed.md  specification-2025-03.26.llm.md
docs/external-deps/mcp/specification/2025-03-26/: README.md  architecture.md  basic.md  changelog.md  server.md
docs/external-deps/mcp/specification/2025-03-26/basic/: authorization.md  lifecycle.md  transports.md
docs/external-deps/mcp/specification/2025-03-26/basic/utilities/: cancellation.md  ping.md  progress.md
docs/external-deps/mcp/specification/2025-03-26/client/: roots.md  sampling.md
docs/external-deps/mcp/specification/2025-03-26/server/: prompts.md  resources.md  tools.md
docs/external-deps/mcp/specification/2025-03-26/server/utilities/: completion.md  logging.md  pagination.md
docs/proposals/: 2025-06-20-hybrid-agentic-service.md
internal/: agent_gateway.py  agent_manager.py  agent_prompt.py  agent_tools.py  code_executor.py  code_processor.py  context.py  internal_tools.py  kernel.py  mcp_manager.py  prompt_manager.py  tool_scaffolding.py  ui.py
mcp-config/: demo-and-fetch.json  demo-only.json
prompts/: system.py  system.txt
scripts/: build.sh  copy-out.sh  dev.sh  exec.sh  run.sh
tests/: test_agent.py  test_manager.py  test_tools.py
